[tool.poetry]
name = "onboard"
version = "0.1.0"
description = ""
authors = ["Vaibhav Jain <jainvaibhav671@gmail.com>"]
readme = "README.md"
packages = [{include = "onboard", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langgraph = "^0.2.60"
langchain-google-vertexai = "^2.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
